frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bsl-frontend
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >
      [{"from":{"kind":"ImageStreamTag","name":"bsl-frontend:staging"},"fieldPath":"spec.template.spec.containers[?(@.name==\"bsl-frontend\")].image","pause":"false"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bsl-frontend
  template:
    metadata:
      labels:
        app: bsl-frontend
    spec:
      containers:
        - name: bsl-frontend
          image: bsl-frontend:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
