frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsl-frontend-service
spec:
  selector:
    app: bsl-frontend
  ports:
    - port: 80
      targetPort: 8080
