frontend/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: bsl-frontend-route

spec:
  to:
    kind: Service
    name: bsl-frontend-service

  port:
    targetPort: 8080
